# control-tags

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  outputs.tf
.github/workflows/: gitleaks.yaml
assets/: vhs.tape
rust/approval/: Cargo.toml
rust/approval/src/: iam.rs  lib.rs  tags.rs  ticket.rs
rust/cli/: Cargo.toml
rust/cli/src/: config.rs  main.rs  types.rs
rust/e2e/: Cargo.toml
rust/e2e/tests/: control_tags_tests.rs  mpa_tests.rs  mpa_usage_guarded_actions_tests.rs  mpa_usage_resource_seals_tests.rs
rust/retention-lambda/: Cargo.toml
rust/retention-lambda/src/: main.rs
terraform/control-tags/: locals.tf  organization.tf  outputs.tf  provider.tf  rcp_multiparty_approval_seals.tf  scp.tf  scp_control_tags.tf  scp_guarded_actions.tf  sso_mirror_roles.tf  ticket_retention.tf  ticket_retention_common.tf  ticket_retention_manager.tf  ticket_retention_scheduler.tf  ticket_retention_worker.tf  vars.tf
