[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
aws-arn = "0.3.1"
aws-config = { workspace = true }
aws-sdk-iam = { workspace = true }
aws-sdk-sts = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { version = "4.4.8", features = ["derive"] }
serde_json = { workspace = true }
serde = { workspace = true }

approval = { path = "../approval", optional = true }
