[package]
name = "retention-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-organizations = "1.42.0"
aws-sdk-lambda = "1.42.0"
aws-sdk-iam = { workspace = true }
aws-config = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
lambda_runtime = "0.13.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = "1.39.3"
anyhow = "1.0.86"
lazy_static = "1.5.0"
aws-arn = "0.3.1"
aws-smithy-types-convert = { version = "0.60.8", features = [
    "convert-streams",
] }
async-stream = "0.3.5"
approval = { path = "../approval" }


[dev-dependencies]
tokio-test = "0.4.4"
